--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,1 @@
-VITE_API_URL=https://invoice-server-9lnvk1470-ashudeepdubey8108gmailcoms-projects.vercel.app 
+VITE_API_URL=https://invoice-backend-flax.vercel.app/ 
