--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^138.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -15,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "puppeteer": "^21.6.1",
+    "puppeteer-core": "^24.17.0",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
